# invenio-formatter

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  requirements.txt  usage.rst
etc/output_formats/: Makefile.am
examples/: app.py
examples/templates/: index.html
invenio_formatter/: __init__.py  api.py  bundles.py  config.py  engine.py  ext.py  manage.py  models.py  registry.py  utils.py  version.py  views.py
invenio_formatter/context_processors/: __init__.py  badges.py
invenio_formatter/filters/: __init__.py  datetime.py  html.py
invenio_formatter/template_context_functions/: tfn_get_back_to_search_links.py
invenio_formatter/templates/invenio_formatter/macros/: badges.html  meta.html
invenio_formatter/translations/: invenio.pot  messages.pot
invenio_formatter/translations/af/LC_MESSAGES/: messages.po
invenio_formatter/translations/ar/LC_MESSAGES/: messages.po
invenio_formatter/translations/bg/LC_MESSAGES/: messages.po
invenio_formatter/translations/ca/LC_MESSAGES/: messages.po
invenio_formatter/translations/cs/LC_MESSAGES/: messages.po
invenio_formatter/translations/da/LC_MESSAGES/: messages.po
invenio_formatter/translations/de/LC_MESSAGES/: messages.po
invenio_formatter/translations/de_AT/LC_MESSAGES/: messages.po
invenio_formatter/translations/de_DE/LC_MESSAGES/: messages.po
invenio_formatter/translations/el/LC_MESSAGES/: messages.po
invenio_formatter/translations/en_AT/LC_MESSAGES/: messages.po
invenio_formatter/translations/en_HU/LC_MESSAGES/: messages.po
invenio_formatter/translations/es/LC_MESSAGES/: messages.po
invenio_formatter/translations/es_CU/LC_MESSAGES/: messages.po
invenio_formatter/translations/es_MX/LC_MESSAGES/: messages.po
invenio_formatter/translations/et/LC_MESSAGES/: messages.po
invenio_formatter/upgrades/: formatter_2014_08_01_recjson.py  formatter_2014_08_25_add_bibfmt_kind.py  formatter_2014_10_29_add_mime_type.py  formatter_2015_01_29_removal_of_format_tables.py  invenio_formatter_2015_10_02_legacy_removal.py
tests/: conftest.py  test_examples_app.py  test_filters.py  test_formatter_utils.py  test_invenio_formatter.py  test_template_context_processors.py  test_template_macros.py  test_views.py
(+34 files in other folders)
