# SPDX-FileCopyrightText: 2015-2018 CERN.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-formatter"
description = "Jinja utilities for Invenio."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "flask",
  "invenio",
  "jinja2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "arrow>=0.7.0",
  "bleach>=3.1.0",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "pillow>=10.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-formatter"

[project.entry-points."invenio_base.apps"]
invenio_formatter = "invenio_formatter:InvenioFormatter"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_formatter"

[project.optional-dependencies]
tests = [
  "cairosvg>=1.0.20",
  "mock>=4.0.3",
  "pillow>=10.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_formatter/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_formatter/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_formatter/translations/messages.pot"
output_dir = "invenio_formatter/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_formatter/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_formatter",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_formatter --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests invenio_formatter"
live_server_scope = "module"
